Explicit constructors for question subclasses
Explicit allArgs and copy constructors for all question subclasses and their unit tests.