@@ -3,11 +3,8 @@ package server.database.entities.question;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import java.lang.reflect.Constructor;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 import org.junit.jupiter.api.BeforeAll;
@@ -39,7 +36,7 @@ class MatchQuestionTest {
     @Test
     void checkAnswerTest() {
         // first user has all correct
-        List<Activity> answerAct = new ArrayList<>(Arrays.asList(
+        List<Activity> answerAct = new ArrayList<>(List.of(
                 getActivity(0), getActivity(1), getActivity(2), getActivity(3)));
         Answer a = new Answer();
         a.setUserChoice(answerAct);
@@ -47,26 +44,26 @@ class MatchQuestionTest {
         userAnswers.add(a);
 
         // second user has all wrong
-        answerAct = new ArrayList<>(Arrays.asList(
+        answerAct = new ArrayList<>(List.of(
                 getActivity(3), getActivity(2), getActivity(1), getActivity(0)));
         a = new Answer();
         a.setUserChoice(answerAct);
         userAnswers.add(a);
 
         // third user has two switched (2/4 of points)
-        answerAct = new ArrayList<>(Arrays.asList(
+        answerAct = new ArrayList<>(List.of(
                 getActivity(0), getActivity(2), getActivity(1), getActivity(3)));
         a = new Answer();
         a.setUserChoice(answerAct);
         userAnswers.add(a);
 
-        assertEquals(new ArrayList<>(Arrays.asList(1.0, 0.0, 2.0 / 4)), q.checkAnswer(userAnswers));
+        assertEquals(new ArrayList<>(List.of(1.0, 0.0, 2.0 / 4)), q.checkAnswer(userAnswers));
     }
 
     @Test
     void checkAnswerMismatchingSize() {
         // first user has 4 activities
-        List<Activity> answerAct = new ArrayList<>(Arrays.asList(
+        List<Activity> answerAct = new ArrayList<>(List.of(
                 getActivity(0), getActivity(1), getActivity(2), getActivity(3)));
         Answer a = new Answer();
         a.setUserChoice(answerAct);
@@ -74,14 +71,14 @@ class MatchQuestionTest {
         userAnswers.add(a);
 
         // second user has 5 activities
-        answerAct = new ArrayList<>(Arrays.asList(
+        answerAct = new ArrayList<>(List.of(
                 getActivity(3), getActivity(2), getActivity(1), getActivity(0), getActivity(12)));
         a = new Answer();
         a.setUserChoice(answerAct);
         userAnswers.add(a);
 
         // third user has 4 activities
-        answerAct = new ArrayList<>(Arrays.asList(
+        answerAct = new ArrayList<>(List.of(
                 getActivity(0), getActivity(2), getActivity(1), getActivity(3)));
         a = new Answer();
         a.setUserChoice(answerAct);
@@ -101,19 +98,38 @@ class MatchQuestionTest {
 
     @Test
     void allArgsConstructorTest() {
-        // Show all available constructors
-        Class ctClass = MatchQuestion.class;
-
-        Constructor[] constructors = ctClass.getConstructors();
-        for (int i = 0; i < constructors.length; i++) {
-            System.out.println("constructor: " + constructors[i]);
-        }
-
-        // Actual test
+        // Test setup
         String questionText = "aQuestion";
-        Question match = new MatchQuestion(UUID.randomUUID(), new ArrayList<>(), questionText);
-        assertNotNull(match);
-        assertEquals(questionText, match.getText());
-        assertTrue(match.getActivities().isEmpty());
+        List<Activity> activities = new ArrayList<>(List.of(
+                getActivity(0), getActivity(1), getActivity(2), getActivity(3)));
+        UUID anId = UUID.randomUUID();
+        Question matchAllArgs = new MatchQuestion(anId, activities, questionText);
+        Question matchNoArgs = new MatchQuestion();
+        matchNoArgs.setId(anId);
+        matchNoArgs.setActivities(List.copyOf(activities));
+        matchNoArgs.setText(questionText);
+
+        // Constructor comparison
+        assertNotNull(matchAllArgs);
+        assertEquals(matchNoArgs.getId(), matchAllArgs.getId());
+        assertEquals(matchNoArgs.getActivities(), matchAllArgs.getActivities());
+        assertEquals(matchNoArgs.getText(), matchAllArgs.getText());
+    }
+
+    @Test
+    void copyConstructorTest() {
+        // Test setup
+        String questionText = "aQuestion";
+        List<Activity> activities = new ArrayList<>(List.of(
+                getActivity(0), getActivity(1), getActivity(2), getActivity(3)));
+        UUID anId = UUID.randomUUID();
+        Question matchAllArgs = new MatchQuestion(anId, activities, questionText);
+        Question matchCopy = new MatchQuestion(matchAllArgs);
+
+        // Constructor comparison
+        assertNotNull(matchCopy);
+        assertEquals(matchAllArgs.getId(), matchCopy.getId());
+        assertEquals(matchAllArgs.getActivities(), matchCopy.getActivities());
+        assertEquals(matchAllArgs.getText(), matchCopy.getText());
     }
 }
